// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Public view should render children when they are present 1`] = `
<ContextProvider
  value={Array []}
>
  <div>
    <div>
      <div
        className="pho-content-header --no-icon --hide-bar"
      >
        <h2
          className="pho-content-title"
        />
        <div
          className="pho-toolbar"
          data-test-id="pho-toolbar-album-public"
          role="toolbar"
        >
          <CozyHomeLink
            className="pho-public-mycozy"
            from="sharing-photos"
          />
          <Button
            align="center"
            className="pho-public-download"
            data-test-id="album-public-download"
            icon={[Function]}
            onClick={[Function]}
            size="normal"
            tag="button"
            theme="secondary"
            type="submit"
          />
          <Menu
            className="u-hide--desk"
            component={<MoreButton />}
            position="right"
          >
            <MenuItem
              data-test-id="album-public-create-cozy-mobile"
              icon={
                <Icon
                  icon={[Function]}
                  spin={false}
                />
              }
              onSelect={[Function]}
            />
            <MenuItem
              data-test-id="album-public-download-mobile"
              icon={
                <Icon
                  icon={[Function]}
                  spin={false}
                />
              }
              onSelect={[Function]}
            />
          </Menu>
        </div>
      </div>
      <withI18n(WithContentRect)
        fetchMore={[MockFunction]}
        hasMore={false}
        lists={
          Array [
            Object {
              "photos": Array [
                1,
                2,
                3,
              ],
            },
          ]
        }
        onPhotoToggle={[Function]}
        onPhotosSelect={[Function]}
        onPhotosUnselect={[Function]}
        photosContext="timeline"
        selected={Array []}
        showSelection={false}
      />
      <div
        key=".0"
        photos={
          Array [
            1,
            2,
            3,
          ]
        }
      />
    </div>
  </div>
</ContextProvider>
`;

exports[`Public view should render the album 1`] = `
<ContextProvider
  value={Array []}
>
  <div>
    <div>
      <div
        className="pho-content-header --no-icon --hide-bar"
      >
        <h2
          className="pho-content-title"
        />
        <div
          className="pho-toolbar"
          data-test-id="pho-toolbar-album-public"
          role="toolbar"
        >
          <CozyHomeLink
            className="pho-public-mycozy"
            from="sharing-photos"
          />
          <Button
            align="center"
            className="pho-public-download"
            data-test-id="album-public-download"
            icon={[Function]}
            onClick={[Function]}
            size="normal"
            tag="button"
            theme="secondary"
            type="submit"
          />
          <Menu
            className="u-hide--desk"
            component={<MoreButton />}
            position="right"
          >
            <MenuItem
              data-test-id="album-public-create-cozy-mobile"
              icon={
                <Icon
                  icon={[Function]}
                  spin={false}
                />
              }
              onSelect={[Function]}
            />
            <MenuItem
              data-test-id="album-public-download-mobile"
              icon={
                <Icon
                  icon={[Function]}
                  spin={false}
                />
              }
              onSelect={[Function]}
            />
          </Menu>
        </div>
      </div>
      <withI18n(WithContentRect)
        fetchMore={[MockFunction]}
        hasMore={false}
        lists={
          Array [
            Object {
              "photos": Array [],
            },
          ]
        }
        onPhotoToggle={[Function]}
        onPhotosSelect={[Function]}
        onPhotosUnselect={[Function]}
        photosContext="timeline"
        selected={Array []}
        showSelection={false}
      />
    </div>
  </div>
</ContextProvider>
`;
